# mlx-exp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _program_builder.py  build_and_run.sh  build_and_run_whisper.sh  decode_llama_output_ids.py  export_llama.py  export_whisper.py  generate_from_schema.py  generated_ops_mixin.py  ops_schema.py  program_builder.py  test.py  torch_registry.py
LLMDemo/LLMDemo/: ContentView.swift  LLMDemo-Bridging-Header.h  LLMDemoApp.swift  LLMRunner.h  LLMRunner.mm  llm_entry.cpp  llm_entry.hpp
LLMDemo/LLMDemo.xcodeproj/: project.pbxproj
LLMDemo/LLMDemo.xcodeproj/xcshareddata/xcschemes/: LLMDemo.xcscheme
src/: graph_build.hpp  id.hpp  interpreter.hpp  llm_builder.hpp  main.cpp  main_whisper.cpp  ops.hpp  program.hpp  program_json_loader.hpp
